updated routers and added tests

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ DB_PASS = DB_PASS
 DB_NAME = DB_NAME
 SECRET_KEY=SECRET_KEY
 ALGORITHM=ALGORITHM
+REDIS_URL=redis://localhost
+RABBIT_URL='pyamqp://guest:guest@localhost//'
