--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,14 @@ python-jose = "^3.3.0"
 passlib = "^1.7.4"
 pymorphy2 = "^0.9.1"
 celery = "^5.3.6"
+bcrypt = "^4.1.2"
+fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
+loguru = "^0.7.2"
+flower = "^2.0.1"
+pillow = "^10.3.0"
+crontab = "^1.0.1"
+sqladmin = "^0.17.0"
+pytest = "^8.2.2"
 
 
 [build-system]
