added new_test and update styling

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,13 @@ SECRET_KEY=SECRET_KEY
 ALGORITHM=ALGORITHM
 REDIS_URL=redis://localhost
 RABBIT_URL='pyamqp://guest:guest@localhost//'
+SMTP_HOST='smtp.gmail.com'
+SMTP_PORT=465
+SMTP_USER=user
+SMTP_PASSWORD=password
+TEST_POSTGRES_HOST = 'localhost'
+TEST_POSTGRES_PORT = 5432
+TEST_POSTGRES_DB = 'tests_booking_bd'
+TEST_POSTGRES_USER = 'postgres'
+TEST_POSTGRES_PASSWORD = '12345'
+MODE = 'DEV'
