--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,9 @@ SMTP_USER=user
 SMTP_PASSWORD=password
 TEST_POSTGRES_HOST = 'localhost'
 TEST_POSTGRES_PORT = 5432
-TEST_POSTGRES_DB = 'tests_booking_bd'
+TEST_POSTGRES_DB = 'postgres'
 TEST_POSTGRES_USER = 'postgres'
 TEST_POSTGRES_PASSWORD = '12345'
 MODE = 'DEV'
+LOG_LEVEL =
+SENTRY_DSN =
