--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,8 @@ flake8 = "^7.1.1"
 isort = "^5.13.2"
 autoflake = "^2.3.1"
 pyright = "^1.1.383"
+python-json-logger = "^2.0.7"
+sentry-sdk = {extras = ["fastapi"], version = "^2.17.0"}
 
 
 [build-system]
